@@ -7,15 +7,17 @@ import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.VBox;
 import javafx.scene.shape.SVGPath;
 import model.Poliformat;
-import model.Subject;
+import model.SubjectInfo;
 import model.User;
-import utils.Utils;
+import utils.Settings;
 
 import java.awt.*;
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.util.Comparator;
 import java.util.ResourceBundle;
 
 public class HomeController implements Initializable {
@@ -33,28 +35,32 @@ public class HomeController implements Initializable {
     private VBox listID;
 
     private User user;
-    private Poliformat poliformat;
 
     @Override
-    public void initialize(URL location, ResourceBundle resources) {
-
-    }
+    public void initialize(URL location, ResourceBundle resources) {}
 
     public void init(User user) throws IOException {
         this.user = user;
         nameID.setText(user.getNameUser() + " " + user.getLastNameUser());
         mailID.setText(user.getMailUser());
-        
-        poliformat = new Poliformat();
+
+        Poliformat poliformat = new Poliformat();
 
         poliformat.syncRemote();
         poliformat.syncLocal();
 
-        for (Subject item : poliformat.getSubjects()) {
-            listID.getChildren().add(new SubjectComponent(item));
-        }
+        poliformat.getSubjects().values().stream()
+                .sorted(Comparator.comparing(SubjectInfo::getName))
+                .forEachOrdered(subjectInfo -> {
+                    try {
+                        listID.getChildren().add(new SubjectComponent(subjectInfo));
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+                });
     }
 
+    @FXML
     private void updateAll() {
         for (int i = 0; i < listID.getChildren().size(); i++) {
             ((SubjectComponent) listID.getChildren().get(i)).sync();
@@ -63,12 +69,12 @@ public class HomeController implements Initializable {
 
     @FXML
     private void openFolder(MouseEvent event) throws IOException {
-        Desktop.getDesktop().open(new File(Utils.poliformatDirectory()));
+        Desktop.getDesktop().open(new File(Settings.poliformatDirectory()));
     }
 
     @FXML
     private void openWeb(MouseEvent event) throws IOException, URISyntaxException {
-        Desktop.getDesktop().browse(new URL("https://poliformat.upv.es/portal").toURI());
+        Desktop.getDesktop().browse(new URI("https://poliformat.upv.es/portal"));
     }
 
 }
